data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3778.wast
;; 7. **Test Description**: Create a module where `br_table` references index values after dynamically modifying the stack. Test engines' handling of index errors in dynamic stack alterations.    - **Specific Constraint**: Check resilience to stack manipulations altering valid indices in `br_table`.    - **Relation to `call`**: Dynamic stack state affecting valid function indices in `call` scenarios needs to be consistent.

(assert_invalid
  (module
    (func $f (param i32))
    (type $sig (func (param i32)))
    (table funcref (elem $f))
    (func $dynamic-stack-use
      (i32.const 1)
      (br_table 0 0 (i32.add (i32.const 0) (i32.const 1)))
      (call_indirect (type $sig) (i32.const 0) (i32.const 0))
    )
  )
  "type mismatch"
)